# curves

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/crv/: CMakeLists.txt  algorithm.hpp  algorithm_test.cpp  bit.hpp  bit_test.cpp  bitwise_enum.hpp  bitwise_enum_test.cpp  concepts.hpp  concepts_test.cpp  i18n.cpp  i18n.hpp  i18n_test.cpp  lib.hpp  prefetcher.hpp  prefetcher_test.cpp  priority_queue.hpp  priority_queue_test.cpp  ranges.hpp  ranges_test.cpp  sequential_enum_name_map.hpp  sequential_enum_name_map_test.cpp  static_vector.hpp  static_vector_test.cpp  traits.hpp  traits_test.cpp  tuple.hpp  tuple_test.cpp  variant.hpp  variant_test.cpp
src/crv/curves/: concepts.hpp  concepts_test.cpp  curves.hpp  derivatives.hpp  log_normal.hpp  log_normal_test.cpp  synchronous.hpp  synchronous_test.cpp  traits_test.cpp
src/crv/driver/: CMakeLists.txt  Kbuild.in  Makefile  dkms.conf.in  entry_point.c  fpu_guard.cpp  fpu_guard.hpp  load-module.conf.in  math.cpp  math.hpp  udev.rules.in
src/crv/kernel/: CMakeLists.txt  Kbuild.in  cxx_build_test.cpp  cxx_build_test.h  entry_point.c
src/crv/kernel/cxx/: cassert  cstdint
src/crv/kernel/input/: handler.c  handler.h
src/crv/math/: abs.hpp  abs_test.cpp  accuracy_metrics.hpp  accuracy_metrics_test.cpp  arg_min_max.hpp  arg_min_max_test.cpp  cmp.hpp  cmp_test.cpp  compensated_accumulator.hpp  compensated_accumulator_test.cpp  complex.hpp  complex_test.cpp  complex_traits.hpp  complex_traits_test.cpp  conjugate_quantizer.hpp  conjugate_quantizer_test.cpp  elementwise_max.hpp  elementwise_max_test.cpp  error_metrics.hpp  error_metrics_test.cpp  fixed.hpp  fixed_test.cpp  float_extraction.hpp  float_extraction_test.cpp  float_limits.hpp  float_limits_test.cpp  int128_test.cpp  int_traits.hpp  int_traits_test.cpp  integer.hpp  integer_test.cpp  inverse.hpp  inverse_test.cpp  io.cpp  io.hpp  io_test.cpp  limits.hpp  limits_test.cpp  linear.hpp  linear_test.cpp  (+16 more)
src/crv/math/division/: concepts.hpp  concepts_test.cpp  dispatcher.hpp  dispatcher_test.cpp  dispatching_divider.hpp  dispatching_divider_test.cpp  divider.hpp  divider_test.cpp  (+23 more)
src/crv/model/: config.hpp  config_test.cpp
src/crv/quadrature/: adaptive_integrator.hpp  adaptive_integrator_test.cpp  bisector.hpp  bisector_test.cpp  integral.hpp  integration_test.cpp  rules.hpp  stack.hpp  stack_test.cpp  subdivider.hpp
src/crv/reflection/: constraints.hpp  constraints_test.cpp  param.hpp  param_test.cpp
src/crv/serialization/: deserializer.hpp  exceptions.hpp  reader.hpp  reader_test.cpp  writer.hpp  writer_test.cpp
src/crv/shaping/: composite_curve.hpp  composite_curve_test.cpp  config.hpp  config_test.cpp  shaping_integration_test.cpp
src/crv/signal_chain/: signal_chain_integration_test.cpp
src/crv/spline/: pipeline_config.hpp  segment_integration_test.cpp  segment_test.cpp  spline_integration_test.cpp  tangent_extension_test.cpp
src/crv/test/: CMakeLists.txt  mock_callable.hpp  test.cpp  test.hpp  typed_equal.hpp
src/crv/ui/: CMakeLists.txt  hierarchical_inspector.hpp  hierarchical_inspector_test.cpp  main.cpp
src/curves/: CMakeLists.txt  config.hpp.in  fixed.hpp  fixed_io.hpp  fixed_io_test.cpp  fixed_test.cpp  fixed_test_s128.cpp  fixed_test_s64.cpp  io.hpp  io_test.cpp  lib.hpp  math64_test.cpp  math_test.cpp  numeric_cast.hpp  ranges.hpp  spline.cpp  spline.hpp  spline_test.cpp  static_vector.hpp  test.hpp
src/curves/config/: curve.hpp  enum.hpp  param.hpp  param_test.cpp  profile.hpp  profile_store.hpp  profile_store_test.cpp
src/curves/curves/: synchronous.hpp
src/curves/driver/: Kbuild  Kconfig  Makefile  conditioning.c  conditioning.h  driver.h  fixed.c  fixed.h  input_shaping.c  input_shaping.h  int_math.c  kernel_compat.c  kernel_compat.h  math.c  math.h  math64.c  math64.h  segment.h  segment_eval.h  segment_unpacking.c  segment_unpacking.h  shaped_spline.h  spline.c  spline.h  types.h
src/curves/driver_tests/: int_math_test.cpp  math_test.cpp
src/curves/fixed_test/: add.cpp  addition.cpp  divide.cpp  division.cpp  exp2.cpp  io.cpp  isqrt.cpp  log2.cpp  multiplication.cpp  multiply.cpp  s128.cpp  s64.cpp  subtract.cpp  subtraction.cpp  test.cpp
src/curves/kernel/: .clang-format  .clangd  CMakeLists.txt  common_test.cpp  common_test.hpp  int128_test.cpp  kbuild_query.mk  lib.hpp  math64_test.cpp
src/curves/lib/: CMakeLists.txt  config.hpp.in  lib.cpp  lib.hpp  test.hpp
src/curves/math/: cached_integral.hpp  cached_integral_test.cpp  conditioning.cpp  conditioning.hpp  conditioning_test.cpp  curve.hpp  curve_view.hpp  curve_view_test.cpp  easing.hpp  easing_test.cpp  fixed.hpp  input_shaping.hpp  input_shaping_test.cpp  input_shaping_view.hpp  input_shaping_view_test.cpp  integration.hpp  integration_test.cpp  inverse_function.hpp  inverse_function_test.cpp  io.hpp  jet.hpp  jet_nested_test.cpp  jet_test.cpp  segment.hpp  segment_construction.hpp  segment_construction_test.cpp  segment_eval.hpp  segment_eval_test.cpp  segment_packing.cpp  segment_packing.hpp  segment_packing_test.cpp  segment_test.cpp  shaped_spline_builder.cpp  shaped_spline_builder.hpp  shaped_spline_view.hpp  spline.cpp  spline.hpp  spline_test.cpp  spline_view.hpp  transfer_function.hpp  (+1 more)
src/curves/modes/: synchronous.hpp
src/curves/rendering/: spline_evaluator.hpp  spline_evaluator_test.cpp  spline_sampler.hpp  spline_sampler_test.cpp
src/curves/shaping/: ease_in.hpp  ease_in_test.cpp  ease_out.hpp  ease_out_test.cpp  ease_testing.hpp  transition.hpp  transition_test.cpp
src/curves/test/: CMakeLists.txt  isqrt.hpp
src/curves/testing/: CMakeLists.txt  error_metrics.hpp  isqrt.cpp  isqrt.hpp  linear_curve.hpp  shaped_spline_accuracy.hpp  test.hpp
src/curves/tools/: exp2.sollya  isqrt_initial_guess.sollya  isqrt_initial_guess_u32.sollya  isqrt_initial_guess_u64.sollya  log2.sollya
src/curves/ui/: CMakeLists.txt  model.cpp  model.hpp  param.hpp  param_test.cpp  presenter.cpp  presenter.hpp  renderer.hpp  ui.hpp
src/kernel/crv/: CMakeLists.txt  Kbuild.in  Makefile  entry_point.c  fpu_guard.cpp
(+712 files in other folders)
