# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Frank Secilia
#
# main library cmake
#
# This file contains the main library. It contains just about all of the code other than the kernel module itself,
# tests, and ui.

add_library(lib)
target_sources(lib PRIVATE
    bit.hpp
    concepts.hpp
    math/arg_min_max.hpp
    math/compensated_accumulator.hpp
    math/complex_traits.hpp
    math/elementwise_max.hpp
    math/error_metrics.hpp
    math/fixed/fixed_limits.hpp
    math/fixed/float_conversions.hpp
    math/fixed/io.hpp
    math/fixed/quantizer.hpp
    math/float_limits.hpp
    math/inverse.hpp
    math/io.cpp
    math/io.hpp
    math/jet/jet.hpp
    math/polynomial.hpp
    math/stats.hpp
    model/config.hpp
    priority_queue.hpp
    reflection/constraints.hpp
    reflection/enum.hpp
    reflection/param.hpp
    sequential_enum_name_map.hpp
    serialization/deserializer.hpp
    serialization/exceptions.cpp
    serialization/exceptions.hpp
    serialization/reader.hpp
    serialization/serializer.hpp
    serialization/toml/archive.cpp
    serialization/toml/archive.hpp
    serialization/toml/concepts.hpp
    serialization/toml/error_reporting.cpp
    serialization/toml/error_reporting.hpp
    serialization/toml/reader_adapter.hpp
    serialization/toml/toml.hpp
    serialization/toml/writer_adapter.hpp
    serialization/writer.hpp
    signal_chain/curves/curves.hpp
    signal_chain/curves/derivatives.hpp
    signal_chain/curves/log_normal.hpp
    signal_chain/curves/synchronous.hpp
    signal_chain/curves/traits.hpp
    signal_chain/quadrature/adaptive_integrator.hpp
    signal_chain/quadrature/antiderivative.hpp
    signal_chain/quadrature/bisector.hpp
    signal_chain/quadrature/integral.hpp
    signal_chain/quadrature/rules.hpp
    signal_chain/quadrature/segment.hpp
    signal_chain/quadrature/stack.hpp
    signal_chain/quadrature/subdivider.hpp
    signal_chain/spline/construction/segment/amr/approximant.hpp
    signal_chain/spline/construction/segment/amr/bisection.hpp
    signal_chain/spline/construction/segment/amr/error_metric.hpp
    signal_chain/spline/construction/segment/amr/function_sampler.hpp
    signal_chain/spline/construction/segment/amr/interval.hpp
    signal_chain/spline/construction/segment/amr/node_generator.hpp
    signal_chain/spline/construction/segment/amr/residual_estimator.hpp
    signal_chain/spline/construction/segment/amr/subdivision_predicate.hpp
    signal_chain/spline/construction/segment/amr/subdivision.hpp
    signal_chain/spline/construction/segment/field_packer.hpp
    signal_chain/spline/construction/segment/segment_factory.hpp
    signal_chain/spline/construction/segment/segment_packer.hpp
    signal_chain/spline/construction/segment/segment_quantizer.hpp
    signal_chain/spline/construction/segment/shift_planner.hpp
    signal_chain/spline/construction/spline/amr/assembler.hpp
    signal_chain/spline/construction/spline/amr/refinement_pool_seeder.hpp
    signal_chain/spline/construction/spline/amr/refiner.hpp
    signal_chain/spline/construction/spline/amr/seed/critical_point_conditioner.hpp
    signal_chain/spline/construction/spline/amr/seed/dyadic_stride_calculator.hpp
    signal_chain/spline/construction/spline/amr/seed/span_decomposer.hpp
    signal_chain/spline/construction/spline/amr/seed/subdomain_factory.hpp
    signal_chain/spline/construction/spline/amr/spline_generator.hpp
    signal_chain/spline/construction/spline/amr/typestates.hpp
    signal_chain/spline/construction/spline/amr/workspace.hpp
    signal_chain/spline/construction/spline/tangent_extender.hpp
    signal_chain/spline/construction/weight_functions/exponential_decay.hpp
    signal_chain/spline/construction/weight_functions/hyperbolic_decay.hpp
    signal_chain/spline/construction/weight_functions/uniform.hpp
    tuple.hpp
    variant.hpp
)
target_sources_kernel(lib
    algorithm.hpp
    bitwise_enum.hpp
    kernel/cxx_build_test.cpp
    kernel/cxx_build_test.h
    lib.hpp
    math/abs.hpp
    math/cmp.hpp
    math/division/concepts.hpp
    math/division/divider.hpp
    math/division/hardware_divider.hpp
    math/division/io.hpp
    math/division/qr_pair.hpp
    math/division/shifted_int_divider.hpp
    math/division/wide_divider.hpp
    math/fixed/exp2_neg_m1.cpp
    math/fixed/exp2_neg_m1.hpp
    math/fixed/exp2.hpp
    math/fixed/fixed.hpp
    math/fixed/fma.hpp
    math/int_traits.hpp
    math/integer.hpp
    math/limits.hpp
    math/linear.hpp
    math/rounding_mode.hpp
    math/saturate_cast.hpp
    math/scalar_traits.hpp
    math/shifter.hpp
    prefetcher.hpp
    ranges.hpp
    signal_chain/spline/pipeline_config.hpp
    signal_chain/spline/segment_locator.hpp
    signal_chain/spline/segment.hpp
    signal_chain/spline/spline.hpp
    signal_chain/spline/tangent_extension.hpp
    traits.hpp
)
target_include_directories(lib PUBLIC "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/src>")
set_target_properties(lib
    PROPERTIES
        OUTPUT_NAME curves
        VERSION ${PROJECT_VERSION}
        SOVERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}"
)
target_link_libraries(lib project_options tomlplusplus::tomlplusplus)

if (enable_testing)
    add_subdirectory(test)

    add_executable(unit_tests)
    target_sources(unit_tests PRIVATE
        algorithm_test.cpp
        bit_test.cpp
        bitwise_enum_test.cpp
        concepts_test.cpp
        math/abs_test.cpp
        math/arg_min_max_test.cpp
        math/cmp_test.cpp
        math/compensated_accumulator_test.cpp
        math/complex_traits_test.cpp
        math/division/concepts_test.cpp
        math/division/hardware_divider_test.cpp
        math/division/io_test.cpp
        math/division/shifted_int_divider_test.cpp
        math/division/wide_divider_test.cpp
        math/elementwise_max_test.cpp
        math/error_metrics_test.cpp
        math/fixed/exp2_neg_m1_test.cpp
        math/fixed/fixed_limits_test.cpp
        math/fixed/fixed_test.cpp
        math/fixed/float_conversions_test.cpp
        math/fixed/fma_test.cpp
        math/fixed/quantizer_test.cpp
        math/fixed/rsqrt_test.cpp
        math/float_limits_test.cpp
        math/int_traits_test.cpp
        math/integer_test.cpp
        math/inverse_test.cpp
        math/io_test.cpp
        math/jet/test/jet.cpp
        math/jet/test/nested_jet.cpp
        math/limits_test.cpp
        math/linear_test.cpp
        math/polynomial_test.cpp
        math/rounding_mode_test.cpp
        math/saturate_cast_test.cpp
        math/scalar_traits_test.cpp
        math/shifter_test.cpp
        math/stats_test.cpp
        model/config_test.cpp
        prefetcher_test.cpp
        priority_queue_test.cpp
        ranges_test.cpp
        reflection/constraints_test.cpp
        reflection/enum_test.cpp
        reflection/param_test.cpp
        sequential_enum_name_map_test.cpp
        serialization/deserializer_test.cpp
        serialization/reader_test.cpp
        serialization/serializer_test.cpp
        serialization/toml/archive_test.cpp
        serialization/toml/concepts_test.cpp
        serialization/toml/error_reporting_test.cpp
        serialization/toml/reader_adapter_test.cpp
        serialization/toml/writer_adapter_test.cpp
        serialization/writer_test.cpp
        signal_chain/curves/log_normal_test.cpp
        signal_chain/curves/synchronous_test.cpp
        signal_chain/curves/test.hpp
        signal_chain/curves/traits_test.cpp
        signal_chain/quadrature/adaptive_integrator_test.cpp
        signal_chain/quadrature/antiderivative_test.cpp
        signal_chain/quadrature/bisector_test.cpp
        signal_chain/quadrature/integral_test.cpp
        signal_chain/quadrature/integration_test.cpp
        signal_chain/quadrature/rules_test.cpp
        signal_chain/quadrature/stack_test.cpp
        signal_chain/quadrature/subdivider_test.cpp
        signal_chain/spline/construction/segment/amr/approximant_test.cpp
        signal_chain/spline/construction/segment/amr/bisection_test.cpp
        signal_chain/spline/construction/segment/amr/error_metric_test.cpp
        signal_chain/spline/construction/segment/amr/function_sampler_test.cpp
        signal_chain/spline/construction/segment/amr/interval_test.cpp
        signal_chain/spline/construction/segment/amr/node_generator_test.cpp
        signal_chain/spline/construction/segment/amr/residual_estimator_test.cpp
        signal_chain/spline/construction/segment/amr/subdivision_predicate_test.cpp
        signal_chain/spline/construction/segment/amr/subdivision_test.cpp
        signal_chain/spline/construction/segment/field_packer_test.cpp
        signal_chain/spline/construction/segment/segment_factory_test.cpp
        signal_chain/spline/construction/segment/segment_packer_test.cpp
        signal_chain/spline/construction/segment/segment_quantizer_test.cpp
        signal_chain/spline/construction/segment/shift_planner_test.cpp
        signal_chain/spline/construction/spline/amr/assembler_test.cpp
        signal_chain/spline/construction/spline/amr/refinement_pool_seeder_test.cpp
        signal_chain/spline/construction/spline/amr/refiner_test.cpp
        signal_chain/spline/construction/spline/amr/seed/critical_point_conditioner_test.cpp
        signal_chain/spline/construction/spline/amr/seed/dyadic_stride_calculator_test.cpp
        signal_chain/spline/construction/spline/amr/seed/span_decomposer_test.cpp
        signal_chain/spline/construction/spline/amr/seed/subdomain_factory_test.cpp
        signal_chain/spline/construction/spline/amr/spline_generator_test.cpp
        signal_chain/spline/construction/spline/amr/workspace_test.cpp
        signal_chain/spline/construction/spline/tangent_extender_test.cpp
        signal_chain/spline/construction/weight_functions/exponential_decay_test.cpp
        signal_chain/spline/construction/weight_functions/hyperbolic_decay_test.cpp
        signal_chain/spline/construction/weight_functions/uniform_test.cpp
        signal_chain/spline/tangent_extension_test.cpp
        signal_chain/spline/pipeline_config_test.cpp
        signal_chain/spline/segment_locator_test.cpp
        signal_chain/spline/segment_test.cpp
        signal_chain/spline/spline_test.cpp
        traits_test.cpp
        tuple_test.cpp
        variant_test.cpp
    )
    target_link_libraries(unit_tests PUBLIC
        lib
        testing
    )
    gtest_discover_tests(unit_tests)
    add_dependencies(build_tests unit_tests)

    if (BUILD_INTEGRATION_TESTS)
        add_executable(spline_integration_test
            signal_chain/spline/segment_integration_test.cpp
            signal_chain/spline/spline_integration_test.cpp
        )
        target_link_libraries(spline_integration_test PRIVATE lib testing)

        # this will fold into integration tests once we run it less frequently
        add_executable(signal_chain_integration_test
            signal_chain/signal_chain_integration_test.cpp
        )
        target_link_libraries(signal_chain_integration_test PRIVATE lib testing)
    endif()
endif()

add_subdirectory(kernel)
add_subdirectory(ui)
